fraud_detection/application-chart/green.yaml
apiVersion: v1
kind: Service
metadata:
  name: "green"
  labels:
    app: "green"
spec:
  type: ClusterIP
  clusterIP: 10.4.1.10
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: "green"
