fraud_detection/application-chart/live.yaml
apiVersion: v1
kind: Service
metadata:
  name: "live"
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
  labels:
    app: "live"
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
  selector:
    app: "blue"
